# rustapi-rs

./: Cargo.toml
migrations/: 20230918005411_init.up.sql
src/: handler.rs  main.rs  model.rs  schema.rs
